# duck_os

./: .gitignore  Makefile  README.md
dependency/bitmap-allocator-main/: Cargo.toml
dependency/riscv/: Cargo.toml
os/: Cargo.toml  Makefile
os/doc/: 内存模块.md  同步模块.md  异常和中断处理模块.md  文件系统模块.md  进程模块.md
os/src/: entry.S  main.rs
os/src/config/: fs.rs  mm.rs
os/src/driver/: mod.rs
os/src/driver/qemu/: mod.rs  virt_block.rs
os/src/fs/: dentry.rs  fd_table.rs  file.rs  file_system.rs  info.rs  inode.rs  mod.rs  page_cache.rs  pipe.rs  stdio.rs
os/src/fs/devfs/: cpu_dma_lantency.rs  mod.rs  null.rs  rtc.rs  tty.rs  urandom.rs  zero.rs
os/src/fs/ext4/: disk.rs  ext4_dentry.rs  ext4_file.rs  ext4_fs.rs  ext4_inode.rs  mod.rs
os/src/fs/fat32/: fat_dentry.rs  fat_file.rs  fat_fs.rs  fat_inode.rs
os/src/fs/procfs/: meminfo.rs  mod.rs  mounts.rs
os/src/fs/simplefs/: mod.rs  simple_dentry.rs  simple_file.rs  simple_inode.rs
os/src/fs/tmpfs/: mod.rs
os/src/mm/: address.rs  cow.rs  page_table.rs  pma.rs  vma.rs
os/src/mm/memory_set/: mem_set.rs  page_fault.rs
os/src/mm/vma_range/: vma_range.rs
os/src/process/: context.rs  kstack.rs  mod.rs  pcb.rs  pid.rs
os/src/process/hart/: cpu.rs
os/src/process/loader/: mod.rs  stack.rs
os/src/process/trap/: mod.rs  trap.S
os/src/sync/: spin_mutex.rs
os/src/syscall/: error.rs  fs.rs  misc.rs  mod.rs  process.rs
os/src/utils/: cell.rs  mod.rs  path.rs  random.rs
