[package]
name = "os"
version = "0.1.0"
authors = ["Lucifer Huang <2697699085@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
buddy_system_allocator = "0.9.1"
bitmap-allocator = {git = "https://github.com/rcore-os/bitmap-allocator"}
bitflags = "2.5.0"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
hashbrown = "0.14"
xmas-elf = "0.7.0"
virtio-drivers = "0.6.0"
lwext4_rust = { path = "../dependency/lwext4_rust"}
strum = { version = "0.26", default_features = false, features = ["derive"] }
downcast-rs = { version = "1.2.0", default-features = false }

[profile.release]
debug = true

[features]
default = ["qemu", "preliminary"]

qemu = []
preliminary = []
multi_hart = []
